# pdf-auto-tagger

./: .gitignore  ACCESSIBILITY_LEDGER.md  BLUEPRINT.md  CLAUDE.md  README.md  THROUGHPUT_ARCHITECTURE.md  analyze_qa_report.py  debug_report.json  debug_routing.py  debug_test.py  fix_router.py  fix_syntax.py  generate_test_pdf.py  match_mcid.py  match_qa.py  patch_colab.py  patch_colab_pipeline.py  patch_ld_colab.py  patch_pipeline_colab_fix.py  patch_pipeline_font.py  pyproject.toml  requirements.txt  revert.py  run_batch.py  run_modal.py  strip_tags.py  test_empty_content.py  test_empty_p.py  test_mineru.py  test_script.py  test_script2.py  verify_pdf.py
corpus_clean/: SOURCES.md
output_batch/: CITY OF MIRAMAR, FLORIDA_report.confidence.json  CITY OF MIRAMAR, FLORIDA_report.json  Missouri State Epidemiological Profile July 2018_report.json  Osteoarthritis_report.json  Summary of Revenues and Expenditures_report.json  nyvra-factsheet_report.json
scratch/: all_errors.txt  all_errors2.txt  bdc_text.txt  check_bdc.py  check_bdc_text.py  check_cell_bbox.py  check_coords.py  check_pdf.py  check_plumber.py  check_plumber2.py  compare_qa.py  cpu_extract.py  debug_cells.py  diagnose_miramar.py  diagnose_miramar_modal.py  diagnostic_coords.py  diagnostic_coords_real.py  find_mcid.py  layout_agreement.py  layout_distribution.py  layout_tokens.py  local_smoke_test.py  miramar_diag_output.txt  print_all_errors.py  print_cells.py  print_cells2.py  print_cells_debug.py  print_cells_run.py  print_net_position.py  print_page_elements.py  print_table_y.py  print_text_y.py  (+22 more)
(+131 files in other folders)
