[project]
name = "pdf-auto-tagger"
version = "0.1.0"
description = "Local-first PDF auto-tagger that beats PREP quality while staying affordable"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11.0",
    "pdfminer.six>=20231228",
    "pymupdf>=1.24.0",
    "pikepdf>=9.0.0",
    "Pillow>=10.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
mineru = [
    "mineru[core]",
    "mineru-vl-utils[transformers]",
]
formulas = [
    "unimernet[full]",
]
alttext = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "accelerate>=0.30.0",
]

[project.scripts]
tagger = "tagger.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
